<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>musique</artifactId>
        <groupId>com.tulskiy</groupId>
        <version>0.3-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>musique-core</artifactId>
    <name>musique-core</name>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>bin/*</include>
                </includes>
                <targetPath>../.</targetPath>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>bin/*</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <jarPath>${project.parent.relativePath}</jarPath>
                    <archive>
                        <manifest>
                            <mainClass>com.tulskiy.musique.system.Main</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.beatofthedrum</groupId>
            <artifactId>alacdecoder</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge</groupId>
            <artifactId>jaad</artifactId>
            <version>0.7.3</version>
        </dependency>
        <dependency>
            <groupId>jwbroek</groupId>
            <artifactId>cuelib</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>org</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>2.0.4</version>
        </dependency>
        <dependency>
            <groupId>javaFlacEncoder</groupId>
            <artifactId>javaFlacEncoder</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>org.kc7bfi</groupId>
            <artifactId>jflac</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>com.tulskiy</groupId>
            <artifactId>tta</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.xiph</groupId>
            <artifactId>vorbis-java</artifactId>
            <version>1.0.0-beta</version>
        </dependency>
        <dependency>
            <groupId>com.wavpack</groupId>
            <artifactId>wavpack</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>dvaguine</groupId>
            <artifactId>jmac</artifactId>
            <version>1.74</version>
        </dependency>
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>javalayer</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jorbis</artifactId>
            <version>0.0.17</version>
        </dependency>
        <dependency>
            <groupId>de.umass</groupId>
            <artifactId>last.fm-bindings</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.benow</groupId>
            <artifactId>discogs</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>com.tulskiy</groupId>
            <artifactId>jkeymaster</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.6</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>tulskiy/jkeymaster</id>
            <url>https://tulskiy.github.io/jkeymaster/maven/</url>
        </repository>
    </repositories>
</project>